<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_c"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="141dp"

        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595">

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/nama"
            android:text="@string/aziz"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama"
            android:text="@string/nim"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/nim"
            android:text=": 200602113"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nim"
            android:text="@string/prodi"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nim"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/prodi"
            android:text="@string/ti"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prodi"
            android:text="@string/kls"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prodi"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/kelas"
            android:text=": D"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kelas"
            android:text="@string/mk"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kelas"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/mk"
            android:text="@string/promile"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mk"
            android:text="@string/smstr"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mk"
            android:layout_toRightOf="@+id/semester"
            android:text="@string/tiga"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hoby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/semester"
            android:text="@string/hoby"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/semester"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/hoby"
            android:text="@string/olahraga"
            android:textColor="#333"
            android:textStyle="bold" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>